WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163750
REGRESSION (
r207620
): [mac-wk1] LayoutTest compositing/iframes/page-cache-layer-tree.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=163750
Summary
REGRESSION (r207620): [mac-wk1] LayoutTest compositing/iframes/page-cache-lay...
Ryan Haddad
Reported
2016-10-20 12:39:34 PDT
LayoutTest compositing/iframes/page-cache-layer-tree.html is a flaky failure
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK1%20(Tests)/r207628%20(10810)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=compositing%2Fiframes%2Fpage-cache-layer-tree.html
--- /Volumes/Data/slave/elcapitan-release-tests-wk1/build/layout-test-results/compositing/iframes/page-cache-layer-tree-expected.txt +++ /Volumes/Data/slave/elcapitan-release-tests-wk1/build/layout-test-results/compositing/iframes/page-cache-layer-tree-actual.txt @@ -23,7 +23,7 @@ (children 1 (GraphicsLayer (anchor 0.00 0.00) - (bounds 285.00 150.00) + (bounds 285.00 135.00) (children 1 (GraphicsLayer (children 1 @@ -73,7 +73,7 @@ (children 1 (GraphicsLayer (anchor 0.00 0.00) - (bounds 285.00 150.00) + (bounds 285.00 135.00) (children 1 (GraphicsLayer (children 1
Attachments
Patch
(4.77 KB, patch)
2016-12-16 10:37 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-10-20 12:40:15 PDT
Seems to have started after
https://trac.webkit.org/changeset/207620
Andreas Kling
Comment 2
2016-10-20 12:45:10 PDT
Urkh, yeah that's definitely the culprit.
Ryan Haddad
Comment 3
2016-10-20 13:02:22 PDT
Marked as flaky in
http://trac.webkit.org/projects/webkit/changeset/207635
Radar WebKit Bug Importer
Comment 4
2016-11-15 12:07:13 PST
<
rdar://problem/29273020
>
Andreas Kling
Comment 5
2016-12-16 10:37:00 PST
Created
attachment 297324
[details]
Patch
WebKit Commit Bot
Comment 6
2016-12-16 12:44:38 PST
Comment on
attachment 297324
[details]
Patch Clearing flags on attachment: 297324 Committed
r209932
: <
http://trac.webkit.org/changeset/209932
>
WebKit Commit Bot
Comment 7
2016-12-16 12:44:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug